<resources>
    <string name="app_name">ProstorTimeTracker</string>
    <string name="action_settings">Settings</string>
    <string name="now_label">Now:</string>
    <string name="Details_label">Details</string>
    <string name="Total_tracked_wage_details">Total</string>
    <string name="setting_change_color">Change Color</string>
    <string name="setting_change_price">Change Price</string>
    <string name="setting_change_currency">Change Currency</string>
    <string name="timer_dialog_title">Select the number of hours worked</string>
    <string name="hour_title">Hours</string>
    <string name="minute_title">Minutes</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="price_dialog_title">Enter price per hour</string>
    <string name="price_dialog_message">Change the price</string>
    <string name="wage_details_activity_title">Details</string>
    <string name="setting_title">Settings</string>
    <string name="reset_message">Are you sure you want to delete all worked hours?</string>



</resources>
