<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/change_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_change_color"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/font_size"/>

    <TextView
        android:id="@+id/change_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_change_price"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/font_size"/>

    <TextView
        android:id="@+id/change_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_change_currency"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/font_size"/>

</LinearLayout>